--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,8 +11,10 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
 
     steps:
     - uses: actions/checkout@v2
